@@ -1,4 +1,4 @@
-$Id: README 29353 2013-03-12 10:54:16Z peter $
+$Id: README 29456 2013-03-21 11:32:36Z peter $
 Public domain.  Originally created by Karl Berry, 2005.
 
 Libraries we compile for TeX Live.
@@ -28,7 +28,7 @@ graphite2 1.2.1 - checked 7mar13
 harfbuzz 0.9.13 - checked 27feb19
   http://www.freedesktop.org/software/harfbuzz/release/
 
-icu 51.1 (51_rc) - checked 7mar13
+icu 51.1 (51_r1) - checked 21mar13
   http://download.icu-project.org/files/icu4c/
 
 libpng 1.6.0 - checked 16feb13
