@@ -1,3 +1,7 @@
+2013-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	Import MetaPost 1.800 from LuaTeX repository (r4604).
+
 2013-01-29  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* am/mplib.am: Allow subdir-objects.
