@@ -1,3 +1,9 @@
+2013-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am: Reorder included Makefile fragments and drop the
+	obsolete luatexdir/am/liblua51.am.
+	* ac/web2c.ac: MetaPost now uses cairo.
+
 2013-03-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am: Add luatexdir/am/liblua52.am for LuaTeX 0.75.0.
